--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
       <a href="#">Contact</a>
     </nav>
     </div>
-   
+   <header>
+      
+<img src="img/fun-bus.jpg" alt="fun-bus">
+<div class="main-header">
+<h2> Welcome To Fun Bus! </h2>
+<p>Traveling expedition moder, clean webdesign blogger clean website theme website modern.
+  Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website
+  expedition theme travelblogger. Adventure fun traveler pretty design website expedition. </p>
+
+</div>
+</header>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
