--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <img src="img/adventure.jpg" alt="Let's go on an adventure!">
       </div>
     </section>
-    <section class="content-section inverse-content">
+    <section class="content-section-inverse-content">
       <div class="img-content">
-          <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
+          <img src="img/fun.jpg" class="img-fluid-rounded" alt="Lets have fun!">
       </div>
       <div class="text-content">
         <h2>Adventure Awaits</h2>
