--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body>
 
   
+
      
   <div class="container home">
+
 <div class="nav-bar">
     <h1> Fun Bus </h1> 
     <nav> 
@@ -28,6 +30,8 @@
       <a href="#">Contact</a>
     </nav>
     </div>
+
+
    <header>
       
 <img src="img/fun-bus.jpg" alt="fun-bus">
@@ -49,7 +53,7 @@
         <img src="img/adventure.jpg" alt="Let's go on an adventure!">
       </div>
     </section>
-    <section class="content-section-inverse-content">
+    <section class="content-section inverse-content">
       <div class="img-content">
           <img src="img/fun.jpg" class="img-fluid-rounded" alt="Lets have fun!">
       </div>
